. [NEW] Tests: 
        ActionTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
        DirectorTest: test case for demonstrating runLoopCommon with a scroll view
        ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move 
. [FIX] Animation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
. [FIX] Actions:
        CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
        CCActionTween: fixed missing copyWithZone
        CCRepeatForever: has a stop method now (issue #945)
. [FIX] ActionManager: always calls stop on a action that must be removed (issue #945)
. [FIX] ColorLayer: color and opacity are readwrite (issue #1246)
. [FIX] Director: exceptions raised in runloop didn't cause program to abort (issue #911)
. [FIX] Node: 
        onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
        touches still work when UIKit elements lay on top of cocos view 
. [FIX] Sprite: CCSprite bug in setDisplayFrameWithAnimationName
. [FIX] ParticleSystem
        unschedule update method when deallocated
        incorrect position of free and relative particles when emitter is scaled (issue #1352)
        gravity now behaves the same on retina/non retina (issue #1238) 
        ParticleSystemQuad: Changed animation property to particleAnimation, for compiler warning
. [FIX] RenderTexture: fixed new getUIImageFromBuffer implementation
. [FIX] TouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
. [FIX] Grabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
. [FIX] Compiler 
        fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 
        changed %08X to %p in reporting strings for resolving compile errors in xCode 4.4/LLVM 4 