@@ -19,7 +19,9 @@ version 1.1-rc0 ..-..-2012
         ActionTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
         DirectorTest: test case for demonstrating runLoopCommon with a scroll view
         ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move 
-. [FIX] Animation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
+. [FIX] Animation: 
+        bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
+        changing delayPerUnit also updates duration
 . [FIX] Actions:
         CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
         CCActionTween: fixed missing copyWithZone
@@ -31,7 +33,7 @@ version 1.1-rc0 ..-..-2012
         onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
         touches still work when UIKit elements lay on top of cocos view 
 . [FIX] Sprite: CCSprite bug in setDisplayFrameWithAnimationName
-. [FIX] ParticleSystem
+. [FIX] ParticleSystem:
         unschedule update method when deallocated
         incorrect position of free and relative particles when emitter is scaled (issue #1352)
         gravity now behaves the same on retina/non retina (issue #1238) 
